--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -1,8 +1,19 @@
 #app {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: #d8d8d8;
     font-family: 'Work Sans', sans-serif;
+    overflow-x: hidden;
+    padding-bottom: 100px;
+}
+
+html {
+    height: 100vh;
+}
+
+body {
+    height: 100%;
+    overflow-x: hidden;
 }
 
 input {
